Fixed status not showing in the issue email. Added status to emails sent out after issue publish.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
@@ -191,7 +191,7 @@
         display: block;
         text-align: center;
         line-height: 32px;
-        font-size: 13px;
+        font-size: 15px;
       }
     }
   }
